added base canvas and board, assets

--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html"
   },
+  "browserslist": [
+    "last 1 Chrome version"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babylonjs": "^4.2.0",
+    "babylonjs-loaders": "^4.2.0",
     "parcel-bundler": "^1.12.5"
   }
 }
