--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "babylonjs": "^4.2.0",
+    "babylonjs-gui": "^4.2.0",
     "babylonjs-loaders": "^4.2.0",
     "parcel-bundler": "^1.12.5"
   }
