--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "chess-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html"
   },
+  "type": "module",
   "browserslist": [
     "last 1 Chrome version"
   ],
@@ -16,6 +17,7 @@
     "babylonjs": "^4.2.0",
     "babylonjs-gui": "^4.2.0",
     "babylonjs-loaders": "^4.2.0",
+    "express": "^4.17.1",
     "parcel-bundler": "^1.12.5"
   }
 }
