--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html"
   },
-  "type": "module",
   "browserslist": [
     "last 1 Chrome version"
   ],
@@ -17,7 +16,7 @@
     "babylonjs": "^4.2.0",
     "babylonjs-gui": "^4.2.0",
     "babylonjs-loaders": "^4.2.0",
-    "express": "^4.17.1",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.5",
+    "socket.io-client": "^4.1.2"
   }
 }
