--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "babylonjs-loaders": "^4.2.0",
     "parcel-bundler": "^1.9.4",
     "socket.io-client": "^4.1.3"
+  },
+  "devDependencies": {
+    "typescript": "^4.4.2"
   }
 }
