--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html",
+    "start": "node server.js",
+    "dev": "parcel index.html",
     "build": "parcel build index.html --public-url ./"
   },
   "browserslist": [
@@ -14,15 +15,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "assets": "^3.0.1",
     "babylonjs": "^4.2.0",
-    "babylonjs-gui": "^4.2.0",
     "babylonjs-loaders": "^4.2.0",
-    "parcel-bundler": "^1.9.4",
+    "express": "^4.17.1",
+    "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^16.9.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "parcel-bundler": "^1.9.4"
   }
 }
