--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "socket.io-client": "^4.2.0"
   },
   "devDependencies": {
-    "@types/node": "^16.9.1",
-    "typescript": "^4.4.3",
-    "parcel-bundler": "^1.9.4"
+    "@types/node": "^16.10.3",
+    "parcel-bundler": "^1.9.4",
+    "typescript": "^4.4.3"
   }
 }
