--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "parcel index.html --no-hmr",
+    "dev": "parcel index.html",
     "build": "parcel build index.html --public-url ./"
   },
   "browserslist": [
