--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "chess-test",
+  "name": "chess",
   "version": "1.0.0",
   "description": "",
+  "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "parcel index.html",
-    "build": "parcel build index.html --public-url ./"
+    "watch": "webpack --watch",
+    "build": "webpack",
+    "start": "webpack serve --static"
   },
   "browserslist": [
     "last 1 Chrome version"
@@ -22,7 +23,11 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
-    "parcel": "^2.0.1",
-    "typescript": "^4.4.4"
+    "file-loader": "^6.2.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
+    "webpack": "^5.64.2",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.5.0"
   }
 }
