--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --watch",
-    "start": "webpack serve --static --open",
+    "start": "webpack serve --open",
     "server": "node server.js"
   },
   "browserslist": [
@@ -19,16 +19,18 @@
     "babylonjs": "^4.2.0",
     "babylonjs-loaders": "^4.2.0",
     "express": "^4.17.1",
-    "socket.io": "^4.3.2",
-    "socket.io-client": "^4.3.2"
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
-    "@types/node": "^16.11.7",
-    "file-loader": "^6.2.0",
+    "@types/node": "^16.11.10",
+    "@types/webpack": "^5.28.0",
+    "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.5",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.4.4",
-    "webpack": "^5.64.2",
+    "typescript": "^4.5.2",
+    "webpack": "^5.64.3",
     "webpack-cli": "^4.9.1",
     "webpack-dev-middleware": "^5.2.2",
     "webpack-dev-server": "^4.5.0"
