--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babylonjs": "^4.2.0",
     "babylonjs-loaders": "^4.2.0",
     "express": "^4.17.1",
+    "mongodb": "^4.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "socket.io": "^4.4.0",
