--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
-    "server": "node server.js"
+    "server": "node server/server.js"
   },
   "browserslist": [
     "last 1 Chrome version"
@@ -16,30 +16,32 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babylonjs": "^4.2.0",
-    "babylonjs-loaders": "^4.2.0",
+    "babylonjs": "^4.2.1",
+    "babylonjs-loaders": "^4.2.1",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.2",
-    "mongodb": "^4.2.2",
+    "mongodb": "^4.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
-    "@types/node": "^17.0.8",
-    "@types/react": "^17.0.38",
+    "@types/node": "^17.0.15",
+    "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/webpack": "^5.28.0",
     "compression": "^1.7.4",
     "compression-webpack-plugin": "^9.2.0",
-    "css-loader": "^6.5.1",
+    "css-loader": "^6.6.0",
+    "dotenv": "^16.0.0",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.4.6",
+    "mini-css-extract-plugin": "^2.5.3",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.5.4",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-middleware": "^5.3.0",
-    "webpack-dev-server": "^4.7.2"
+    "typescript": "^4.5.5",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-middleware": "^5.3.1",
+    "webpack-dev-server": "^4.7.4"
   }
 }
