--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@auth0/auth0-react": "^1.9.0",
     "babylonjs": "^4.2.1",
     "babylonjs-loaders": "^4.2.1",
     "bcrypt": "^5.0.1",
     "express": "^4.17.2",
+    "express-jwt": "^6.1.0",
+    "jwks-rsa": "^2.0.5",
     "mongodb": "^4.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
