build: mongoDB/Auth0 login

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "dist/bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
-    "server": "node server/server.js"
+    "server": "node server/server.js",
+    "servermon": "nodemon server/server.js"
   },
   "browserslist": [
     "last 1 Chrome version"
@@ -19,7 +19,6 @@
     "@auth0/auth0-react": "^1.9.0",
     "babylonjs": "^4.2.1",
     "babylonjs-loaders": "^4.2.1",
-    "bcrypt": "^5.0.1",
     "express": "^4.17.2",
     "express-jwt": "^6.1.0",
     "jwks-rsa": "^2.0.5",
@@ -30,11 +29,10 @@
     "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
-    "@types/node": "^17.0.15",
+    "@types/node": "^17.0.16",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/webpack": "^5.28.0",
-    "compression": "^1.7.4",
     "compression-webpack-plugin": "^9.2.0",
     "css-loader": "^6.6.0",
     "dotenv": "^16.0.0",
