--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^4.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1"
   },
