--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/main.js",
   "scripts": {
-    "build": "webpack",
+    "dev": "webpack",
+    "build": "webpack --mode=production",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "server": "node server/server.js",
@@ -16,35 +17,35 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@auth0/auth0-react": "^1.9.0",
-    "babylonjs": "^4.2.2",
-    "babylonjs-loaders": "^4.2.2",
+    "@auth0/auth0-react": "^1.10.1",
+    "babylonjs": "^5.6.0",
+    "babylonjs-loaders": "^5.6.0",
     "compression": "^1.7.4",
-    "express": "^4.17.3",
-    "express-jwt": "^6.1.1",
-    "jwks-rsa": "^2.0.5",
-    "mongodb": "^4.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
-    "socket.io": "^4.4.1",
-    "socket.io-client": "^4.4.1"
+    "express": "^4.18.1",
+    "express-jwt": "^7.7.1",
+    "jwks-rsa": "^2.1.2",
+    "mongodb": "^4.6.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
+    "socket.io": "^4.5.0",
+    "socket.io-client": "^4.5.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.41",
-    "@types/react-dom": "^17.0.14",
+    "@types/node": "^17.0.33",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "@types/webpack": "^5.28.0",
     "compression-webpack-plugin": "^9.2.0",
     "css-loader": "^6.7.1",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
-    "ts-loader": "^9.2.8",
-    "typescript": "^4.6.2",
-    "webpack": "^5.70.0",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-middleware": "^5.3.1",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.9.0"
   }
 }
