--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "chess",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/main.js",
-  "scripts": {
-    "build": "webpack",
-    "prod": "webpack --mode=production",
-    "watch": "webpack --watch",
-    "dev": "webpack serve --open",
-    "start": "node server/server.js",
-    "servermon": "nodemon server/server.js"
-  },
-  "browserslist": [
-    "last 1 Chrome version"
+  "name": "sample-monorepo",
+  "type": "module",
+  "workspaces": [
+    "packages/*"
   ],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "babylonjs": "^7.3.2",
-    "babylonjs-loaders": "^7.3.2",
-    "compression": "^1.7.4",
-    "express": "^4.19.2",
-    "express-jwt": "^8.4.1",
-    "jwks-rsa": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5"
+  "scripts": {
+    "clean": "rimraf -g \"./packages/*/dist\"",
+    "build": "tsc --build",
+    "lint": "eslint .",
+    "pretest": "npm run lint && npm run build",
+    "test": "npm run test:only",
+    "test:only": "node --test --enable-source-maps",
+    "start": "npm run start:client",
+    "start:client": "npm run -w @sample/app start",
+    "prestart:server": "npm run -w @sample/app bundle:prod",
+    "start:server": "npm run -w @sample/server start",
+    "prettify": "prettier . --write"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7",
+    "@types/compression": "^1.7.5",
+    "@types/express": "^4.17.21",
+    "@types/node": "20",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
-    "@types/webpack": "^5.28.5",
-    "compression-webpack-plugin": "^11.1.0",
-    "css-loader": "^7.1.1",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.9.0",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.4.5",
+    "prettier": "^3.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rimraf": "^5.0.5",
+    "source-map-loader": "^5.0.0",
+    "typescript": "~5.4.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-middleware": "^7.2.1",
     "webpack-dev-server": "^5.0.4"
-  }
+  },
+  "engines": {
+    "node": ">=20",
+    "npm": ">=8"
+  },
+  "license": "MIT",
+  "private": true
 }
