fix: needing build on prestart to create a dist folder

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build": "npm run copy:public && npm run build:client && npm run build:server",
     "build:client": "esbuild src/client.tsx --bundle --outdir=dist/client --target=es2022 --minify",
     "build:server": "esbuild src/server.ts --bundle --outdir=dist/server --packages=external --platform=node --minify --format=esm",
-    "watch:client": "npm run copy:public && npm run build:client -- --watch",
+    "watch:client": "npm run build:client -- --watch",
     "watch:server": "npm run build:server -- --watch",
-    "start": "concurrently --kill-others \"npm:watch:client\" \"npm:server\"",
-    "server": "concurrently --kill-others \"npm:watch:server\" \"nodemon dist/server/server.js\" ",
+    "nodemon:server": "nodemon ./dist/server/server.js",
+    "prestart": "npm run build",
+    "start": "concurrently --names client,server,nodemon -c auto --kill-others \"npm:watch:client\" \"npm:watch:server\" \"npm:nodemon:server\"",
     "copy:public": "node -e \"fs.cpSync('public', 'dist/client', {recursive: true})\"",
     "typecheck": "tsc --noEmit"
   },
