--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "clean": "node -e \"fs.rmSync('dist', {recursive: true, force: true})\"",
     "prebuild": "npm run clean",
     "build": "npm run copy:public && npm run build:client && npm run build:server",
-    "build:client": "esbuild src/client.tsx --bundle --outdir=dist/client --target=es2022 --minify",
-    "build:server": "esbuild src/server.ts --bundle --outdir=dist/server --packages=external --platform=node --minify --format=esm",
+    "build:client": "esbuild src/client/client.tsx --bundle --outdir=dist/client --target=es2022 --minify",
+    "build:server": "esbuild src/server/server.ts --bundle --outdir=dist/server --packages=external --platform=node --minify --format=esm",
     "watch:client": "npm run build:client -- --watch",
     "watch:server": "npm run build:server -- --watch",
     "nodemon:server": "nodemon ./dist/server/server.js",
@@ -27,13 +27,13 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.3.1",
+    "@types/node": "^20.14.7",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "concurrently": "^8.2.2",
-    "esbuild": "^0.20.2",
-    "nodemon": "^3.1.0",
-    "typescript": "~5.4.5"
+    "esbuild": "^0.21.5",
+    "nodemon": "^3.1.4",
+    "typescript": "~5.5.2"
   },
   "prettier": {}
 }
