--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "clean": "node -e \"fs.rmSync('dist', {recursive: true, force: true})\"",
     "prebuild": "npm run clean",
     "build": "npm run copy:public && npm run build:client && npm run build:server",
-    "build:client": "esbuild src/client/client.tsx --bundle --outdir=dist/client --target=es2022 --minify",
-    "build:server": "esbuild src/server/server.ts --bundle --outdir=dist/server --packages=external --platform=node --minify --format=esm",
+    "build:client": "esbuild src/client/index.tsx --bundle --outdir=dist/client --target=es2022 --minify",
+    "build:server": "esbuild src/server/index.ts --bundle --outdir=dist/server --packages=external --platform=node --minify --format=esm",
     "watch:client": "npm run build:client -- --watch",
     "watch:server": "npm run build:server -- --watch",
     "nodemon:server": "nodemon ./dist/server/server.js",
