--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:server": "esbuild src/server/index.ts --bundle --outdir=dist/server --packages=external --platform=node --minify --format=esm",
     "watch:client": "npm run build:client -- --watch",
     "watch:server": "npm run build:server -- --watch",
-    "nodemon:server": "nodemon ./dist/server/server.js",
+    "nodemon:server": "nodemon dist/server/index.js",
     "prestart": "npm run build",
     "start": "concurrently --names client,server,nodemon -c auto --kill-others \"npm:watch:client\" \"npm:watch:server\" \"npm:nodemon:server\"",
     "copy:public": "node -e \"fs.cpSync('public', 'dist/client', {recursive: true})\"",
@@ -23,7 +23,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
