--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "express": "^4.19.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "three": "^0.165.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.165.0",
     "concurrently": "^8.2.2",
     "esbuild": "^0.21.5",
     "nodemon": "^3.1.4",
