--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "author": "Eliya Vahl",
   "license": "ISC",
   "dependencies": {
-    "babylonjs": "^5.13.3",
-    "babylonjs-loaders": "^5.13.3",
+    "@babylonjs/core": "^7.12.0",
+    "@babylonjs/loaders": "^7.12.0",
     "compression": "^1.7.4",
     "express": "^4.18.1",
     "react": "^18.2.0",
