build: add sourcemap on server

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prebuild": "npm run clean",
     "build": "npm run copy:public && npm run build:client && npm run build:server",
     "build:client": "esbuild src/client/index.tsx --bundle --splitting --outdir=dist/client --target=es2022 --loader:.svg=file --loader:.gltf=file --loader:.png=file --loader:.webp=file --format=esm --sourcemap",
-    "build:server": "esbuild src/server/index.ts --bundle --outdir=dist/server --packages=external --platform=node --minify --format=esm",
+    "build:server": "esbuild src/server/index.ts --bundle --outdir=dist/server --packages=external --platform=node --minify --sourcemap --format=esm",
     "watch:client": "npm run build:client -- --watch",
     "watch:server": "npm run build:server -- --watch",
     "nodemon:server": "nodemon dist/server/index.js",
