--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
+    "@babylonjs/inspector": "^7.22.3",
     "@types/compression": "^1.7.5",
     "@types/node": "^18.19.39",
     "@types/react": "^18.3.3",
