--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "concurrently --names client,server,nodemon -c auto --kill-others \"npm:watch:client\" \"npm:watch:server\" \"npm:nodemon:server\"",
     "copy:public": "node -e \"fs.cpSync('public', 'dist/client', {recursive: true})\"",
     "typecheck": "tsc --noEmit",
+    "build:prod": "npm run copy:public && npm run build:prod:client && npm run build:prod:server",
     "build:prod:client": "esbuild --define:process.env.NODE_ENV=\\\"prod\\\" src/client/index.tsx --bundle --splitting --outdir=dist/client --target=es2022 --loader:.svg=file --loader:.gltf=file --loader:.png=file --loader:.webp=file --format=esm --minify",
     "build:prod:server": "esbuild src/server/index.ts --bundle --outdir=dist/server --packages=external --platform=node  --format=esm --minify"
   },
