--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
   "type": "module",
   "scripts": {
     "clean": "node -e \"fs.rmSync('dist', {recursive: true, force: true})\"",
+    "start": "concurrently --names client,server,nodemon -c auto --kill-others \"npm:watch:client\" \"npm:watch:server\" \"npm:nodemon:server\"",
     "prebuild": "npm run clean",
     "build": "npm run copy:public && npm run build:client && npm run build:server",
-    "build:client": "esbuild --define:process.env.NODE_ENV=\\\"dev\\\" src/client/index.tsx --bundle --splitting --outdir=dist/client --target=es2022 --loader:.svg=file --loader:.gltf=file --loader:.png=file --loader:.webp=file --format=esm --sourcemap",
+    "build:client": "esbuild src/client/index.tsx --bundle --splitting --outdir=dist/client --target=es2022 --loader:.svg=file --loader:.gltf=file --loader:.png=file --loader:.webp=file --format=esm --sourcemap",
     "build:server": "esbuild src/server/index.ts --bundle --outdir=dist/server --packages=external --platform=node --sourcemap --format=esm",
     "watch:client": "npm run build:client -- --watch",
     "watch:server": "npm run build:server -- --watch",
     "nodemon:server": "nodemon dist/server/index.js",
     "prestart": "npm run build",
-    "start": "concurrently --names client,server,nodemon -c auto --kill-others \"npm:watch:client\" \"npm:watch:server\" \"npm:nodemon:server\"",
     "copy:public": "node -e \"fs.cpSync('public', 'dist/client', {recursive: true})\"",
     "typecheck": "tsc --noEmit",
     "build:prod": "npm run copy:public && npm run build:prod:client && npm run build:prod:server",
-    "build:prod:client": "esbuild --define:process.env.NODE_ENV=\\\"prod\\\" src/client/index.tsx --bundle --splitting --outdir=dist/client --target=es2022 --loader:.svg=file --loader:.gltf=file --loader:.png=file --loader:.webp=file --format=esm --minify",
+    "build:prod:client": "esbuild src/client/index.tsx --bundle --splitting --outdir=dist/client --target=es2022 --loader:.svg=file --loader:.gltf=file --loader:.png=file --loader:.webp=file --format=esm --minify",
     "build:prod:server": "esbuild src/server/index.ts --bundle --outdir=dist/server --packages=external --platform=node  --format=esm --minify"
   },
   "browserslist": [
