--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "prestart": "npm run build",
     "copy:public": "node -e \"fs.cpSync('public', 'dist/client', {recursive: true})\"",
     "build": "npm run copy:public && npm run build:client && npm run build:server",
-    "build:client": "esbuild src/client/index.tsx --bundle --splitting --outdir=dist/client --target=es2022 --loader:.svg=file --loader:.mp3=file --loader:.gltf=file --loader:.png=file --loader:.webp=file --format=esm --sourcemap",
+    "build:client": "esbuild src/client/index.tsx --bundle --outdir=dist/client --target=es2022 --loader:.svg=file --loader:.mp3=file --loader:.gltf=file --loader:.png=file --loader:.webp=file --format=esm --sourcemap",
     "build:server": "esbuild src/server/index.ts --bundle --outdir=dist/server --packages=external --platform=node --sourcemap --format=esm",
     "watch:client": "npm run build:client -- --watch",
     "watch:server": "npm run build:server -- --watch",
     "nodemon:server": "nodemon dist/server/index.js",
     "build:prod": "npm run copy:public && npm run build:prod:client && npm run build:prod:server",
-    "build:prod:client": "esbuild src/client/index.tsx --bundle --splitting --outdir=dist/client --target=es2022 --loader:.svg=file --loader:.mp3=file --loader:.gltf=file --loader:.png=file --loader:.webp=file --format=esm --minify",
+    "build:prod:client": "esbuild src/client/index.tsx --bundle --outdir=dist/client --target=es2022 --loader:.svg=file --loader:.mp3=file --loader:.gltf=file --loader:.png=file --loader:.webp=file --format=esm --minify",
     "build:prod:server": "esbuild src/server/index.ts --bundle --outdir=dist/server --packages=external --platform=node  --format=esm --minify"
   },
   "browserslist": [
