style: update manifest color to white

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "short_name": "3D Chess",
   "description": "Play 3D Chess",
   "start_url": "/",
-  "background_color": "#2f3d58",
-  "theme_color": "#2f3d58",
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff",
   "orientation": "portrait",
   "display": "standalone",
   "icons": [
