--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "clean": "node -e \"fs.rmSync('dist', {recursive: true, force: true}); fs.rmSync('build', {recursive: true, force: true})\"",
+    "clean": "node -e \"fs.rmSync('dist', {recursive: true, force: true})\"",
     "start": "concurrently --names client,server,nodemon -c auto --kill-others \"npm:watch:client\" \"npm:watch:server\" \"npm:nodemon:server\"",
     "typecheck": "tsc --noEmit",
     "test": "glob -c \"node --import tsx --test\" \"src/tests/**/*.test.ts\"",
