build: esbuild cli api into a config file for readability/maintainability

--- a/package.json
+++ b/package.json
@@ -6,21 +6,12 @@
   "type": "module",
   "scripts": {
     "clean": "node -e \"fs.rmSync('dist', {recursive: true, force: true})\"",
-    "start": "concurrently --names client,server,nodemon -c auto --kill-others \"npm:watch:client\" \"npm:watch:server\" \"npm:nodemon:server\"",
+    "start": "concurrently --names esbuild,nodemon -c auto \"npm:build\" \"npm:nodemon:server\"",
     "typecheck": "tsc --noEmit",
     "test": "glob -c \"node --import tsx --test\" \"src/tests/**/*.test.ts\"",
-    "prebuild": "npm run clean",
-    "prestart": "npm run build",
-    "copy:public": "node -e \"fs.cpSync('public', 'dist/client', {recursive: true})\"",
-    "build": "npm run copy:public && npm run build:client && npm run build:server",
-    "build:client": "esbuild src/client/index.tsx --bundle --outdir=dist/client --target=es2022 --loader:.svg=file --loader:.mp3=file --loader:.gltf=file --loader:.png=file --loader:.webp=file --format=esm --sourcemap",
-    "build:server": "esbuild src/server/index.ts --bundle --outdir=dist/server --packages=external --platform=node --sourcemap --format=esm",
-    "watch:client": "npm run build:client -- --watch",
-    "watch:server": "npm run build:server -- --watch",
-    "nodemon:server": "nodemon dist/server/index.js",
-    "build:prod": "npm run copy:public && npm run build:prod:client && npm run build:prod:server",
-    "build:prod:client": "esbuild src/client/index.tsx --bundle --outdir=dist/client --target=es2022 --loader:.svg=file --loader:.mp3=file --loader:.gltf=file --loader:.png=file --loader:.webp=file --format=esm --minify",
-    "build:prod:server": "esbuild src/server/index.ts --bundle --outdir=dist/server --packages=external --platform=node  --format=esm --minify"
+    "build": "node esbuild.config.js -- -w",
+    "build:prod": "node esbuild.config.js",
+    "nodemon:server": "nodemon dist/server/index.js"
   },
   "browserslist": [
     "last 1 Chrome version"
