--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "clean": "node -e \"fs.rmSync('dist', {recursive: true, force: true})\"",
-    "start": "concurrently --names esbuild,nodemon -c auto \"npm:build\" \"npm:nodemon:server\"",
+    "start": "concurrently --names esbuild,nodemon --sequential --kill-others -c auto \"npm:build\" \"npm:nodemon:server\"",
     "typecheck": "tsc --noEmit",
     "test": "glob -c \"node --import tsx --test\" \"src/tests/**/*.test.ts\"",
     "build": "node esbuild.config.js -- -w",
