--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "type": "module",
   "scripts": {
     "clean": "node -e \"fs.rmSync('dist', {recursive: true, force: true})\"",
-    "start": "npm run build & concurrently --names esbuild,nodemon -c auto --kill-others npm:watch:avoidprebuild npm:nodemon:server",
+    "start": "npm run build && concurrently --names esbuild,nodemon -c auto --kill-others npm:watch:skipPrebuild npm:nodemon:server",
     "typecheck": "tsc --noEmit",
     "test": "glob -c \"node --import tsx --test\" \"src/tests/**/*.test.ts\"",
     "build": "node esbuild.config.js",
     "watch": "npm run build -- -w",
-    "watch:avoidprebuild": "npm run watch -- -apb",
+    "watch:skipPrebuild": "npm run watch -- -spb",
     "build:prod": "node esbuild.config.js",
     "nodemon:server": "nodemon dist/server/index.js"
   },
