--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "node esbuild.config.js",
     "watch": "npm run build -- -w",
     "watch:skipPrebuild": "npm run watch -- -spb",
-    "build:prod": "node esbuild.config.js",
+    "build:prod": "node esbuild.config.js -- -production",
     "nodemon:server": "nodemon dist/server/index.js"
   },
   "browserslist": [
@@ -24,6 +24,7 @@
     "@babylonjs/core": "^7.29.0",
     "@babylonjs/loaders": "^7.29.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
