--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "type": "module",
   "scripts": {
     "clean": "node -e \"fs.rmSync('dist', {recursive: true, force: true})\"",
-    "start": "npm run build && concurrently --names esbuild,nodemon,tailwind -c auto --kill-others npm:watch:skipPrebuild npm:nodemon:server npm:tailwind",
+    "start": "npm run build && concurrently --names esbuild,nodemon,tailwind -c auto --kill-others npm:watch:skipPrebuild npm:nodemon:server npm:tailwind:watch",
     "typecheck": "tsc --noEmit",
     "test": "glob -c \"node --import tsx --test\" \"src/tests/**/*.test.ts\"",
-    "prebuild": "npx tailwindcss -i ./src/client/index.css -o ./dist/client/index-tailwind-output.css",
-    "tailwind": "npx tailwindcss -i ./src/client/index.css -o ./dist/client/index-tailwind-output.css --watch",
+    "prebuild": "npx tailwindcss -i ./src/client/index.css -o ./dist/client/tailwind-output.css",
+    "tailwind:watch": "npx tailwindcss -i ./src/client/index.css -o ./dist/client/tailwind-output.css --watch",
     "build": "node esbuild.config.js",
     "watch": "npm run build -- -w",
     "watch:skipPrebuild": "npm run watch -- -spb",
