--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Deploy prod
         run: |
           rsync --rsync-path "rsync" --exclude ".git" --exclude ".env" --exclude "node_modules" --exclude "digitalOcean.pem" --delete -azvv -e "ssh -i "digitalOcean.pem" -o StrictHostKeyChecking=no" . "${{ secrets.SERVER_USER  }}"@"${{ secrets.SERVER_IP }}":~/www
-          ssh -i "digitalOcean.pem" -o StrictHostKeyChecking=no "${{ secrets.SERVER_USER  }}"@"${{ secrets.SERVER_IP }}" "source ~/.nvm/nvm.sh && cd www && npm install && npm run clean && npm run build:prod && npx pm2 restart all && exit"
+          ssh -i "digitalOcean.pem" -o StrictHostKeyChecking=no "${{ secrets.SERVER_USER  }}"@"${{ secrets.SERVER_IP }}" "source ~/.nvm/nvm.sh && cd www && npm install && npm run clean && npm run build:prod && npx pm2 kill && npx pm2 start ecosystem.config.cjs && npx pm2 save && exit"
