--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "glob -c \"node --import tsx --test\" \"src/tests/**/*.test.ts\"",
     "build": "node esbuild.config.js & npm run tailwind",
     "build:watch": "node esbuild.config.js -- -w -spb",
-    "build:prod": "node esbuild.config.js -- -p & npm run tailwind",
+    "build:prod": "node esbuild.config.js -- -p && npm run tailwind",
     "nodemon:server": "nodemon dist/server/index.js",
     "tailwind": "tailwindcss -i ./src/client/index.css -o ./dist/client/tailwind-output.css",
     "tailwind:watch": "tailwindcss -i ./src/client/index.css -o ./dist/client/tailwind-output.css --watch"
