--- a/package.json
+++ b/package.json
@@ -35,15 +35,16 @@
   },
   "devDependencies": {
     "@babylonjs/inspector": "^8.0.1",
+    "@tailwindcss/postcss": "^4.1.0",
     "@types/compression": "^1.7.5",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "concurrently": "^9.1.0",
     "esbuild": "^0.24.2",
-    "esbuild-plugin-tailwindcss": "^1.2.1",
     "glob": "^11.0.0",
-    "tailwindcss": "^3.4.17",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   }
