--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.24"
   },
   "devDependencies": {
     "@babylonjs/inspector": "^8.0.1",
